changed app entry point to server.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-app",
   "version": "1.0.0",
   "description": "peerdeco web application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Peerdeco/web-app/issues"
   },
-  "homepage": "https://github.com/Peerdeco/web-app#readme"
+  "homepage": "https://github.com/Peerdeco/web-app#readme",
+  "devDependencies": {
+    "webpack": "^1.13.2"
+  }
 }
