--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.5"
+    "babel-loader": "^6.2.5",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3"
   }
 }
