--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "peerdeco web application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,18 +19,18 @@
   },
   "homepage": "https://github.com/Peerdeco/web-app#readme",
   "devDependencies": {
-    "jshint": "^2.9.4",
-    "strip-loader": "^0.1.2",
-    "webpack": "^1.13.2"
-  },
-  "dependencies": {
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "strip-loader": "^0.1.2",
+    "webpack": "^1.13.2"
+  },
+  "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
