--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "peerdeco web application",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,15 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.25.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
     "strip-loader": "^0.1.2",
-    "webpack": "^1.13.2"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^0.15.0"
   },
   "dependencies": {
     "react": "^15.3.2",
