--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "npm-install-webpack-plugin": "^4.0.4",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
