use hot reloading during development

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "es2015",
     "react"
   ],
-  "plugins" [
+  "plugins": [
     "array-includes",
     "syntax-class-properties",
     "syntax-decorators",
@@ -12,5 +12,12 @@
     "transform-decorators-legacy",
     "transform-object-assign",
     "transform-object-rest-spread"
-  ]
+  ],
+  "env": {
+    "start": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
