--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.25.0",
+    "html-webpack-plugin": "^2.24.0",
+    "html-webpack-template": "^5.4.1",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
