--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.13",
     "css-loader": "^0.25.0",
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
