--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "clean-webpack-plugin": "^0.1.13",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
     "jshint": "^2.9.4",
