--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "peerdeco web application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run",
     "build": "webpack",
     "start": "webpack-dev-server",
     "stats": "webpack --profile --json > webpack.stats.json"
@@ -39,10 +40,22 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
+    "isparta-instrumenter-loader": "^1.0.1",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.1.2",
     "node-libs-browser": "^1.0.0",
     "npm-install-webpack-plugin": "^4.0.4",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.13",
+    "react-addons-test-utils": "^15.3.2",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
