--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.13",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
