--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.13",
     "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
+    "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
