--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tdd": "karma start --auto-watch --no-single-run",
     "build": "webpack",
     "start": "webpack-dev-server",
-    "stats": "webpack --profile --json > webpack.stats.json"
+    "stats": "webpack --profile --json > webpack.stats.json",
+    "lint": "eslint . --ext .js --ext .jsx"
   },
   "repository": {
     "type": "git",
