--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "npm-install-webpack-plugin": "^4.0.4",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.13",
+    "postcss-loader": "^1.0.0",
     "react-addons-test-utils": "^15.3.2",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.5.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.15.0"
