--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
     "isparta-instrumenter-loader": "^1.0.1",
+    "jscs": "^3.0.7",
+    "jscs-loader": "^0.3.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "karma": "^1.3.0",
