removed line feet at end rule

--- a/.jscsrc
+++ b/.jscsrc
@@ -5,6 +5,7 @@
 
   "requireCurlyBraces": true,
   "requireParenthesesAroundIIFE": true,
+  "requireLineFeedAtFileEnd": false,
 
   "maximumLineLength": 120,
   "validateLineBreaks": "LF",
