--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint": "^3.8.1",
     "eslint-loader": "^1.6.0",
     "eslint-plugin-react": "^6.4.1",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.0",
     "html-webpack-template": "^5.4.1",
     "isparta-instrumenter-loader": "^1.0.1",
@@ -67,11 +69,14 @@
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.15.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
