--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "clean-webpack-plugin": "^0.1.13",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
@@ -53,6 +54,7 @@
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "karma": "^1.3.0",
+    "karma-chai-plugins": "^0.8.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
