--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.8.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
