--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "phantomjs-prebuilt": "^2.1.13",
     "postcss-loader": "^1.0.0",
     "react-addons-test-utils": "^15.3.2",
+    "sinon": "^1.17.6",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
