--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0"
   }
 }
