--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
