--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "lodash": "^4.16.6",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
